--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "lucide-react": "^0.294.0"
+        "@emailjs/browser": "^4.0.0",
   },
   "devDependencies": {
     "tailwindcss": "^3.4.0",
