Updated links for new repo name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio-main",
+  "name": "code2career_ai",
   "version": "1.0.0",
   "description": "Professional portfolio showcasing enterprise AI expertise, technical skills, and project portfolio. Built with Next.js and Tailwind CSS.",
   "private": true,
